# contests-c-and-alg-1

./: CMakeLists.txt
algorithms/: 21_09_17_sortings.c  21_10_25_searches_sorts.c  21_10_4_numbers.c  21_11_14_data_structures.c  21_11_29_dynamic_greedy_dnc.c  21_12_10_graphs.c  additional_tasks.c
c_programming/: 001_tic_tac_toe.c  002_sea_batle.c  003_chess.c  21_09_03_introduction.c  21_09_14_conditions.c  21_09_24_cycles.c  21_10_01_arrays.c  21_10_08dynamic.c  21_10_25_matrices.c  21_11_08_game_of_life.c  21_11_15_strings.c  21_11_22_strings_2.c  21_11_29_files.c  21_12_06_ball.c  22_01_12_structures.c  22_01_19_buses.c
